--- a/Svelte/src/app.css
+++ b/Svelte/src/app.css
@@ -8,10 +8,10 @@
 
   --color-base-100: oklch(98% 0.02 240);
   --color-base-200: oklch(95% 0.03 240);
-  --color-base-300: #FCD721;
+  --color-base-300: oklch(95% 0 0);
   --color-base-content: oklch(20% 0.05 240);
-  --color-primary: oklch(55% 0.3 240);
-  --color-primary-content: oklch(98% 0.01 240);
+  --color-primary: oklch(87% 0.169 91.605); /*yellow*/
+  --color-primary-content: #000; /*black*/
   --color-secondary: oklch(70% 0.25 200);
   --color-secondary-content: oklch(98% 0.01 200);
   --color-accent: oklch(65% 0.25 160);
@@ -51,15 +51,14 @@
   color-scheme: dark;
   --color-base-100: oklch(25.33% 0.016 252.42);
   --color-base-200: oklch(23.26% 0.014 253.1);
-  --color-base-300: #FCD721;
-  --color-base-300: #C9AC1A; /* darker */
+  --color-base-300: oklch(92% 0.004 286.32);
   --color-base-content: oklch(97.807% 0.029 256.847);
-  --color-primary: oklch(58% 0.233 277.117);
-  --color-primary-content: oklch(96% 0.018 272.314);
+  --color-primary: oklch(87% 0.169 91.605); /*yellow*/
+  --color-primary-content: #000; /*black*/
   --color-secondary: oklch(65% 0.241 354.308);
   --color-secondary-content: oklch(94% 0.028 342.258);
-  --color-accent: oklch(77% 0.152 181.912);
-  --color-accent-content: oklch(38% 0.063 188.416);
+  --color-accent: oklch(70% 0.015 286.067); /*gray*/
+  --color-accent-content: oklch(27% 0.006 286.033); /*black*/
   --color-neutral: oklch(14% 0.005 285.823);
   --color-neutral-content: oklch(92% 0.004 286.32);
   --color-info: oklch(74% 0.16 232.661);
